# cpp-programmer-de

code/completed/: CMakeLists.txt
code/completed/adventure/: CMakeLists.txt
code/completed/adventure/data/: CMakeLists.txt  LocationData.cpp  LocationData.h
code/completed/adventure/v1/: CMakeLists.txt  Location.cpp  Location.h  README.md  World.cpp  World.h  main.cpp
code/completed/adventure/v2/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v3a/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v3b/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v3c/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v4a/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v4b/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v4c/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v5a/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v5b/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v5c/: CMakeLists.txt  README.md  main.cpp
code/completed/adventure/v6a/: CMakeLists.txt  README.md  main.cpp
code/completed/bmi/: CMakeLists.txt  bmi.cpp
code/completed/builder/: CMakeLists.txt  window.cpp  window.h  window_builder.cpp  window_builder.h  window_main.cpp  window_test.cpp
code/completed/catch2_intro/: CMakeLists.txt
code/completed/catch2_intro/basics/: CMakeLists.txt  catch2_basics.cpp
code/completed/catch2_intro/leap_year/: CMakeLists.txt  leap_year.cpp  leap_year.h  leap_year_scenario_test.cpp  leap_year_test.cpp
code/completed/catch2_intro/order/: CMakeLists.txt  item.cpp  item.h  item_scenario_test.cpp  item_test.cpp  order.cpp  order.h  order_scenario_test.cpp  order_test.cpp
code/completed/cpp_patterns/: CMakeLists.txt  CppPatternsMain.cpp
code/completed/cpp_patterns/lib/: CMakeLists.txt  StaticStrategy.cpp  StaticStrategy.h
code/completed/fizz_buzz/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz.h  fizz_buzz_main.cpp  fizz_buzz_test.cpp
code/completed/hello_world/: CMakeLists.txt
code/completed/invoice/: CMakeLists.txt
code/completed/invoice/data/: CMakeLists.txt  invoice_data.cpp  invoice_data.h
code/completed/invoice/v0/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v1/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v2/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v3/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v4/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v5/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v6/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v7/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v8/: CMakeLists.txt  README.md  main.cpp
code/completed/invoice/v9/: CMakeLists.txt  README.md  main.cpp
code/completed/memory_and_polymorphism/: CMakeLists.txt  godbolt_vec.cpp
code/completed/memory_and_polymorphism/include/: animal.hpp  cat.hpp  (+5 more)
code/completed/modern_cpp/: CMakeLists.txt
code/completed/namespace_lookup/: CMakeLists.txt  namespace_lookup.cpp
code/completed/pointers/: CMakeLists.txt
code/completed/prime_factors/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
code/completed/raii/: CMakeLists.txt  animals.cpp
code/completed/range_examples/: CMakeLists.txt  range_examples.cpp
code/completed/recipes/: CMakeLists.txt  recipes.cpp  recipes.h  recipes_main.cpp  recipes_test.cpp
code/completed/salaries/: CMakeLists.txt  salaries.cpp  salaries.h  salaries_main.cpp
code/completed/shared_memory/: CMakeLists.txt  shm_010_starter.cpp  shm_010_starter.h  shm_020_mapped_region.cpp  shm_020_mapped_region.h  shm_025_mapped_region_multi.cpp  shm_025_mapped_region_multi.h  shm_030_managed_segment.cpp  shm_030_managed_segment.h  shm_035_managed_segment_multi.cpp  shm_035_managed_segment_multi.h  shm_040_named_objects.cpp  shm_040_named_objects.h  shm_045_synchronization.cpp  shm_045_synchronization.h  shm_050_bad_pointer.cpp  shm_050_bad_pointer.h  shm_060_offset_pointer.cpp  shm_060_offset_pointer.h  shm_070_allocator.cpp  shm_070_allocator.h  shm_080_consumer.cpp  shm_080_producer.cpp  shm_080_queue.h  utils.h
code/completed/simple_calculator/: CMakeLists.txt  printer.cpp  printer.hpp  simple_calculator.cpp
code/completed/simple_examples/: CMakeLists.txt
code/completed/test_examples/: CMakeLists.txt  cout_redirect.h  fun_state_interact.cpp  fun_state_interact.h  fun_state_interact_test.cpp  state_machine.h  state_machine_test.cpp
code/completed/virtual_university/: AssignmentTest.cpp  CMakeLists.txt  LectureTest.cpp  Professor.cpp  ProfessorTest.cpp  Student.h  StudentTest.cpp  Submission.cpp  SubmissionTest.cpp  University.h  UniversityTest.cpp  main.cpp
code/starter_kits/: CMakeLists.txt
code/starter_kits/adventure_sk/: .clang-format  CMakeLists.txt  main.cpp
code/starter_kits/adventure_sk2/: CMakeLists.txt  main.cpp
code/starter_kits/blocks_sk/: .clang-format  CMakeLists.txt  LICENSE  README.md  blocks_game.cpp
code/starter_kits/bmi_sk/: CMakeLists.txt
code/starter_kits/fizz_buzz_sk/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz.h  fizz_buzz_main.cpp  fizz_buzz_test.cpp
code/starter_kits/hello_world_sk/: CMakeLists.txt  hello_world_sk.cpp
code/starter_kits/invoice_sk/: CMakeLists.txt
code/starter_kits/library_sk/: .gitignore  CMakeLists.txt  main.cpp
code/starter_kits/prime_factors_sk/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
code/starter_kits/recipes_sk/: CMakeLists.txt  recipes_sk.cpp  recipes_sk.h  recipes_sk_main.cpp  recipes_sk_test.cpp
code/starter_kits/salaries_sk/: CMakeLists.txt  salaries_sk.cpp  salaries_sk.h  salaries_sk_main.cpp
code/starter_kits/simple_calculator_sk/: CMakeLists.txt
code/starter_kits/virtual_university_sk/: Assignment.cpp  Assignment.h  CMakeLists.txt  Lecture.cpp  Lecture.h  LectureTest.cpp  Professor.h  ProfessorTest.cpp  Student.cpp  Submission.h  SubmissionTest.cpp  University.cpp  UniversityTest.cpp
(+1480 files in other folders)
