add_subdirectory("adventure")
add_subdirectory("bmi")
add_subdirectory("cpp_patterns")
add_subdirectory("hello_world")
add_subdirectory("invoice")
add_subdirectory("library")
add_subdirectory("memory_and_polymorphism")
add_subdirectory("modern_cpp")
add_subdirectory("namespace_lookup")
add_subdirectory("pointers")
add_subdirectory("raii")
add_subdirectory("range_examples")
add_subdirectory("simple_calculator")
add_subdirectory("simple_examples")
